k8s/citus-worker-statefulset.yml
apiVersion: v1
kind: Service
metadata:
  name: citus-worker
spec:
  selector:
    app: citus-worker
  ports:
    - port: 5432
      targetPort: 5432
  clusterIP: None
---
# StatefulSet for workers: cada réplica obtiene su PVC via volumeClaimTemplates
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: citus-worker
spec:
  serviceName: citus-worker
  replicas: 2
  selector:
    matchLabels:
      app: citus-worker
  template:
    metadata:
      labels:
        app: citus-worker
    spec:
      containers:
      - name: citus-worker
        image: citusdata/citus:12.1
        imagePullPolicy: IfNotPresent
        command: ["docker-entrypoint.sh", "postgres", "-c", "wal_level=logical", "-c", "max_wal_senders=10", "-c", "max_replication_slots=10"]
        ports:
          - containerPort: 5432
        volumeMounts:
          - name: data
            mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 2Gi
